--- a/public/index.html
+++ b/public/index.html
@@ -16,30 +16,41 @@
     <div class="container">
       <div class="nav-wrapper">
         <a href="./index.html" class="brand-logo center">Flash Card Maker</a>
+        <a href="#" data-target="mobile" class="sidenav-trigger hide-on-med-and-up"><i class="material-icons">menu</i></a>
 
-        <ul class="right">
+        <ul class="right hide-on-small-and-down">
           <li><a class="modal-trigger" href="#modal1"> <i class=" large material-icons">add</i>
             </a></li>
-          <li><a class="hide" id="edit-link" href="#"> <i class="large material-icons">edit</i>
+          <li><a class="hide edit-and-delete edit" href="#"> <i class="large material-icons">edit</i>
             </a></li>
-          <li><a class="hide modal-trigger" id="delete-link" href="#modal2"> <i class="large material-icons">delete</i>
+          <li><a class="hide modal-trigger edit-and-delete" id="delete-link" href="#modal2"> <i class="large material-icons">delete</i>
             </a></li>
-
         </ul>
       </div>
     </div>
   </nav>
+
+  <ul class="sidenav" id="mobile">
+    <li><a class="modal-trigger" href="#modal1"> <i class="small material-icons">add</i>
+      </a></li>
+    <li><a class="hide edit-and-delete edit" href="#"> <i class="small material-icons">edit</i>
+      </a></li>
+    <li><a class="hide modal-trigger edit-and-delete" id="delete-link" href="#modal2"> <i class="small material-icons">delete</i>
+      </a></li>
+  </ul>
   <main>
 
     <section class="section grey lighten-3">
       <div class="row">
         <div class="col s12 m3 center">
+
           <h4 id="flashcards-title">Flash Card Sets</h4>
-          <div class="input-field">
+          <div id="search" class="input-field">
             <input class='white' type="text" name="searchText" id="search-text">
             <label for="search-text">Search Flash Card Sets</label>
 
           </div>
+
           <div id="flashcards" class="collection">
             <!-- insert all the flash card sets here. Below is sample html -->
             <!-- <a href="#" class="collection-item">Chapter 2 (Biology)  <i class="material-icons">edit</i>
@@ -68,9 +79,9 @@
       </div>
     </section>
   </main>
-  <div id="progress-bar" class="progress hide">
+  <!-- <div id="progress-bar" class="progress hide">
     <div class="indeterminate"></div>
-  </div>
+  </div> -->
   <footer class="page-footer blue-grey darken-1">
     <div class="container footer-copyright">
       &copy; 2018, Jerry Garvey
